changes suggested by Sonar